<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="">
        <group>
            <item
                android:id="@+id/nav_music"
                android:icon="@drawable/ic_menu_list"
                android:title="@string/menu_music" />
            <item
                android:id="@+id/nav_favourite"
                android:icon="@drawable/ic_music_fav"
                android:title="@string/menu_favourite" />
            <item
                android:id="@+id/nav_recent"
                android:icon="@drawable/ic_menu_history"
                android:title="@string/menu_recent" />
        </group>
    </item>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_settings" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
        </menu>
    </item>

</menu>
